--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,6 +5,15 @@ version: 1.0.0
 environment:
   sdk: ">=2.17.3 <3.0.0"
 
+dependencies:
+  freezed_annotation: ^2.0.3
+  http: ^0.13.4
+  json_annotation: ^4.5.0
+  json_diff: ^0.2.0
+
 dev_dependencies:
+  build_runner: ^2.1.11
+  freezed: ^2.0.3+1
+  json_serializable: ^6.2.0
   lints: ^2.0.0
   test: ^1.16.0
