--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,7 @@
 name: starknet
 description: Dart SDK for StarkNet ✨
-version: 1.0.0
+version: 0.0.1
+repository: https://github.com/gabsn/starknet.dart
 
 environment:
   sdk: ">=2.17.3 <3.0.0"
