Remove emoji from package description

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: starknet
-description: Dart SDK for StarkNet ✨
+description: Dart SDK for StarkNet
 version: 0.0.1
 repository: https://github.com/gabsn/starknet.dart
 
