--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,17 @@
-# Files and directories created by pub.
-.dart_tool/
-.packages
-
-# Conventional directory for build outputs.
-build/
-
 # Omit committing pubspec.lock for library packages; see
 # https://dart.dev/guides/libraries/private-files#pubspeclock.
 pubspec.lock
+
+# Flutter/Dart/Pub related
+**/doc/api/
+.dart_tool/
+.flutter-plugins
+.flutter-plugins-dependencies
+.packages
+.pub-cache/
+.pub/
+build/
+
+# Miscellaneous
+coverage/
+.DS_Store
