--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   freezed_annotation: ^2.0.3
   http: ^0.13.4
   json_annotation: ^4.5.0
+  pointycastle: ^3.6.0
 
 dev_dependencies:
   build_runner: ^2.1.11
