--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -70,14 +70,18 @@ jobs:
         with:
           githubToken: ${{ secrets.GITHUB_TOKEN }}
 
-  publishing:
+  publish:
     needs: test
     runs-on: ubuntu-latest
+    if: ${{ github.event_name == 'push'  && github.ref == 'refs/heads/main' }}
     steps:
       - name: "Checkout"
         uses: actions/checkout@v2
-      - name: ">> Dart package <<"
+      # Only publishes if package version is different from the latest published on pub.dev
+      # See the docs: https://github.com/marketplace/actions/dart-and-flutter-package-publisher
+      - name: "Publish package"
         uses: k-paxian/dart-package-publisher@master
         with:
           accessToken: ${{ secrets.OAUTH_ACCESS_TOKEN }}
           refreshToken: ${{ secrets.OAUTH_REFRESH_TOKEN }}
+          skipTests: true # Tests have already been run before
