--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,7 @@
 name: starknet
-description: Dart SDK for StarkNet
+description: >
+  The Dart SDK for StarkNet.
+  It implements all the JSON-RPC endpoints plus higher level abstractions to deal with smart contracts.
 version: 0.0.1
 repository: https://github.com/gabsn/starknet.dart
 
