--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,5 @@
 name: starknet
-description: >
-  The Dart SDK for StarkNet.
-  It implements all the JSON-RPC endpoints plus higher level abstractions to deal with smart contracts.
+description: The Dart SDK to interact with any smart contracts on StarkNet
 version: 0.0.2
 repository: https://github.com/gabsn/starknet.dart
 
