--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -37,6 +37,7 @@ jobs:
         run: dart test
 
   publish:
+    if: github.repository == 'gabsn/starknet.dart'
     needs: test
     runs-on: ubuntu-latest
     steps:
