Print github context during cd

--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -14,6 +14,9 @@ jobs:
       matrix:
         sdk: [dev, stable, 2.17.3]
     steps:
+      - name: Print $GITHUB_CONTEXT
+        shell: bash
+        run: echo "$GITHUB_CONTEXT"
       - uses: actions/checkout@v2
       - uses: dart-lang/setup-dart@v1.0
         with:
