Only publish if non-fork repo

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -75,7 +75,7 @@ jobs:
         run: dart test
 
   publish:
-    if: github.repository == 'gabsn/starknet.dart'
+    if: github.event.pull_request.head.repo.fork == false
     needs: test
     runs-on: ubuntu-latest
     steps:
