--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -1,4 +1,4 @@
-name: CI
+name: CD
 
 on:
   push:
@@ -98,7 +98,7 @@ jobs:
           githubToken: ${{ secrets.GITHUB_TOKEN }}
 
   publish:
-    if: github.repository == 'gabsn/starknet.dart'
+    if: github.event.push.head.repo.fork == false
     needs: test
     runs-on: ubuntu-latest
     steps:
