vscode: add "Example ERC20" in launch

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,12 @@
       "request": "launch",
       "type": "dart",
       "program": "test"
+    },
+    {
+      "name": "Example ERC20",
+      "request": "launch",
+      "type": "dart",
+      "program": "${workspaceFolder}/example/examples/erc20.dart",
     }
   ]
 }
