CD: don't publish on forked repo

--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -98,6 +98,7 @@ jobs:
           githubToken: ${{ secrets.GITHUB_TOKEN }}
 
   publish:
+    if: github.event.pull_request.head.repo.fork == false
     needs: test
     runs-on: ubuntu-latest
     steps:
