--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -54,14 +54,21 @@ jobs:
       - id: install
         name: Install dependencies
         run: dart pub get
+        working-directory: packages/starknet
       - name: Check formatting
         run: dart format --output=none --set-exit-if-changed .
+        working-directory: packages/starknet
       - name: Analyze code
         run: dart analyze --fatal-infos
         if: always() && steps.install.outcome == 'success'
+        working-directory: packages/starknet
+
 
   test:
     needs: analyze
+    defaults: 
+      run:
+        working-directory: packages/starknet
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -124,10 +131,12 @@ jobs:
       - id: install
         name: Install dependencies
         run: dart pub get
+        working-directory: packages/starknet
       - name: Run tests on devnet
         env:
           NETWORK: devnet
         run: dart test --exclude-tags nodevnet,blockId
+        working-directory: packages/starknet
 
 
   publish:
