--- a/packages/starknet_builder/pubspec.yaml
+++ b/packages/starknet_builder/pubspec.yaml
@@ -14,6 +14,8 @@ dependencies:
   starknet:
 
 dev_dependencies:
+  analyzer: ^5.4.0
   build_runner: ^2.1.11
+  build_test: ^2.1.6
   lints: ^2.0.0
   test: ^1.16.0
