--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -5,6 +5,9 @@ on:
   schedule:
     - cron: "0 0 * * 0"
 
+env:
+  WORK_DIR: packages/starknet
+
 jobs:
   dump-context:
     runs-on: ubuntu-latest
@@ -54,20 +57,20 @@ jobs:
       - id: install
         name: Install dependencies
         run: dart pub get
-        working-directory: packages/starknet
+        working-directory: ${{ env.WORK_DIR }}
       - name: Check formatting
         run: dart format --output=none --set-exit-if-changed .
-        working-directory: packages/starknet
+        working-directory: ${{ env.WORK_DIR }}
       - name: Analyze code
         run: dart analyze --fatal-infos
         if: always() && steps.install.outcome == 'success'
-        working-directory: packages/starknet
+        working-directory: ${{ env.WORK_DIR }}
 
   test-unit:
     needs: analyze
     defaults:
       run:
-        working-directory: packages/starknet
+        working-directory: ${{ env.WORK_DIR }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -84,7 +87,7 @@ jobs:
     needs: analyze
     defaults:
       run:
-        working-directory: packages/starknet
+        working-directory: ${{ env.WORK_DIR }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -147,16 +150,16 @@ jobs:
       - id: install
         name: Install dependencies
         run: dart pub get
-        working-directory: packages/starknet
+        working-directory: ${{ env.WORK_DIR }}
       - name: Run tests on devnet
         env:
           NETWORK: devnet
         run: dart test -t integration-devnet-040
-        working-directory: packages/starknet
+        working-directory: ${{ env.WORK_DIR }}
 
   publish:
     if: github.event.pull_request.head.repo.fork == false
-    needs: test
+    needs: test-integration-devnet
     runs-on: ubuntu-latest
     steps:
       - name: "Checkout"
