starknet: fix #108: axel-op/dart-package-analysis is using `relativePath` and not `working-directory`to set package directory.

--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -108,6 +108,7 @@ jobs:
       - uses: axel-op/dart-package-analyzer@v3
         with:
           githubToken: ${{ secrets.GITHUB_TOKEN }}
+          relativePath: ${{ env.WORK_DIR }}
 
   publish:
     if: github.event.pull_request.head.repo.fork == false
