--- a/packages/starknet_flutter/analysis_options.yaml
+++ b/packages/starknet_flutter/analysis_options.yaml
@@ -1,4 +1,7 @@
 include: package:flutter_lints/flutter.yaml
 
-# Additional information about this file can be found at
-# https://dart.dev/guides/language/analysis-options
+
+linter:
+  rules:
+    always_use_package_imports: true
+    require_trailing_commas: true
