--- a/packages/starknet_flutter/example/analysis_options.yaml
+++ b/packages/starknet_flutter/example/analysis_options.yaml
@@ -1,1 +1,6 @@
 include: package:flutter_lints/flutter.yaml
+
+linter:
+  rules:
+    always_use_package_imports: true
+    require_trailing_commas: true
