--- a/packages/starknet_flutter/analysis_options.yaml
+++ b/packages/starknet_flutter/analysis_options.yaml
@@ -1,7 +1,4 @@
 include: package:flutter_lints/flutter.yaml
 
-
-linter:
-  rules:
-    always_use_package_imports: true
-    require_trailing_commas: true
+# Additional information about this file can be found at
+# https://dart.dev/guides/language/analysis-options
