--- a/packages/starknet_flutter/example/ios/Runner/Info.plist
+++ b/packages/starknet_flutter/example/ios/Runner/Info.plist
@@ -47,5 +47,7 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>NSFaceIDUsageDescription</key>
+	<string>Use Touch ID or Face ID to process transactions.</string>
 </dict>
 </plist>
