--- a/packages/starknet_flutter/pubspec.yaml
+++ b/packages/starknet_flutter/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   flutter:
     sdk: flutter
   biometric_storage: ^4.1.3
+  crypto: ^3.0.2
   http: ^0.13.5
   pattern_lock: ^2.0.0
   plugin_platform_interface: ^2.0.2
