✨ Store and retrieve any secret

--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -128,3 +128,4 @@ jobs:
           accessToken: ${{ secrets.OAUTH_ACCESS_TOKEN }}
           refreshToken: ${{ secrets.OAUTH_REFRESH_TOKEN }}
           skipTests: true # Tests have already been run before
+          relativePath: ${{ env.WORK_DIR }}
