--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -173,3 +173,4 @@ jobs:
           refreshToken: ${{ secrets.OAUTH_REFRESH_TOKEN }}
           skipTests: true # Tests have already been run before
           dryRunOnly: true
+          relativePath: ${{ env.WORK_DIR }}
