--- a/packages/starknet/pubspec.yaml
+++ b/packages/starknet/pubspec.yaml
@@ -7,6 +7,8 @@ environment:
   sdk: ">=2.17.3 <3.0.0"
 
 dependencies:
+  bip32: ^2.0.0
+  bip39: ^1.0.6
   crypto: ^3.0.2
   freezed_annotation: ^2.0.3
   http: ^0.13.4
