--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,6 +12,12 @@
       "request": "launch",
       "type": "dart",
       "program": "${workspaceFolder}/example/examples/erc20.dart",
+    },
+    {
+      "name": "Flutter app example",
+      "request": "launch",
+      "type": "dart",
+      "program": "packages/starknet_flutter/example/lib/main.dart",
     }
   ]
 }
