--- a/packages/starknet_flutter/pubspec.yaml
+++ b/packages/starknet_flutter/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   flutter:
     sdk: flutter
   biometric_storage: ^4.1.3
+  pattern_lock: ^2.0.0
   plugin_platform_interface: ^2.0.2
   pointycastle: ^3.6.2
   shared_preferences: ^2.0.17
