--- a/packages/starknet_flutter/pubspec.yaml
+++ b/packages/starknet_flutter/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   plugin_platform_interface: ^2.0.2
   pointycastle: ^3.6.2
   shared_preferences: ^2.0.17
+  flutter_svg: ^2.0.2
 
 dev_dependencies:
   flutter_test:
@@ -44,9 +45,10 @@ flutter:
         pluginClass: StarknetFlutterPlugin
 
   # To add assets to your plugin package, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/wallets/argent_x.svg
+    - assets/images/wallets/braavos.svg
+    - assets/images/wallets/open_zeppelin.svg
   #
   # For details regarding assets in packages, see
   # https://flutter.dev/assets-and-images/#from-packages
