🐛 Fix SafeArea modal bottom sheet

--- a/packages/starknet_flutter/pubspec.yaml
+++ b/packages/starknet_flutter/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   pointycastle: ^3.6.2
   shared_preferences: ^2.0.17
   flutter_svg: ^2.0.2
+  modal_bottom_sheet: ^3.0.0-pre
 
 dev_dependencies:
   flutter_test:
