--- a/packages/starknet_flutter/example/pubspec.yaml
+++ b/packages/starknet_flutter/example/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
     sdk: flutter
   cryptocoins_icons: ^0.3.0
   emoji_picker_flutter: ^1.5.2
+  intl: ^0.18.0
   starknet_flutter:
     # When depending on this package from a real application you should use:
     #   starknet_flutter: ^x.y.z
