➕ Add expandable package

--- a/packages/starknet_flutter/pubspec.yaml
+++ b/packages/starknet_flutter/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   shared_preferences: ^2.0.17
   flutter_svg: ^2.0.2
   modal_bottom_sheet: ^3.0.0-pre
+  expandable: ^5.0.1
 
 dev_dependencies:
   flutter_test:
