Add example to use provider

--- a/docs.yaml
+++ b/docs.yaml
@@ -8,6 +8,8 @@ anchors:
 sidebar:
   - - Getting Started
     - "/"
+  - - Provider
+    - "/provider"
   - - Advanced
     - - - Reference API
         - "/reference"
