--- a/packages/starknet_flutter/pubspec.yaml
+++ b/packages/starknet_flutter/pubspec.yaml
@@ -12,19 +12,27 @@ dependencies:
     sdk: flutter
   biometric_storage: ^4.1.3
   crypto: ^3.0.2
+  flutter_svg: ^2.0.2
+  functional_listener: ^2.3.1
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
   http: ^0.13.5
+  modal_bottom_sheet: ^3.0.0-pre
   pattern_lock: ^2.0.0
   plugin_platform_interface: ^2.0.2
   pointycastle: ^3.6.2
-  shared_preferences: ^2.0.17
-  flutter_svg: ^2.0.2
-  modal_bottom_sheet: ^3.0.0-pre
+  shared_preferences: ^2.0.18
+  starknet:
+    path: ../starknet
+  ulid: ^2.0.0
 
 dev_dependencies:
+  build_runner: ^2.3.3
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
-  pigeon: ^8.0.0
+  flutter_lints: ^2.0.1
+  hive_generator: ^2.0.0
+  pigeon: ^9.0.4
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
