--- a/packages/starknet_flutter/pubspec.yaml
+++ b/packages/starknet_flutter/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   flutter_svg: ^2.0.2
   modal_bottom_sheet: ^3.0.0-pre
   expandable: ^5.0.1
+  google_fonts: ^4.0.3
 
 dev_dependencies:
   flutter_test:
