--- a/packages/starknet_flutter/pubspec.yaml
+++ b/packages/starknet_flutter/pubspec.yaml
@@ -10,6 +10,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  animations: ^2.0.7
   biometric_storage: ^4.1.3
   crypto: ^3.0.2
   expandable: ^5.0.1
