--- a/packages/starknet_flutter/pubspec.yaml
+++ b/packages/starknet_flutter/pubspec.yaml
@@ -11,7 +11,6 @@ dependencies:
   flutter:
     sdk: flutter
   animations: ^2.0.7
-  biometric_storage: ^4.1.3
   crypto: ^3.0.2
   expandable: ^5.0.1
   flutter_svg: ^2.0.2
@@ -54,10 +53,14 @@ flutter:
   # adding or updating assets for this project.
   plugin:
     platforms:
+      android:
+        package: com.example.starknet_flutter
+        pluginClass: StarknetFlutterPlugin
       ios:
         pluginClass: StarknetFlutterPlugin
       macos:
         pluginClass: StarknetFlutterPlugin
+
 
   # To add assets to your plugin package, add an assets section, like this:
   assets:
