--- a/packages/starknet_flutter/pubspec.yaml
+++ b/packages/starknet_flutter/pubspec.yaml
@@ -14,14 +14,17 @@ dependencies:
   crypto: ^3.0.2
   expandable: ^5.0.1
   flutter_svg: ^2.0.2
+  intl: ^0.18.0
   functional_listener: ^2.3.1
   google_fonts: ^4.0.3
   hive: ^2.2.3
+  flutter_animate: ^4.1.0
   hive_flutter: ^1.1.0
   http: ^0.13.5
   modal_bottom_sheet: ^3.0.0-pre
   path_provider: ^2.0.13
   pattern_lock: ^2.0.0
+  slide_to_act: ^2.0.1
   plugin_platform_interface: ^2.0.2
   pointycastle: ^3.6.2
   starknet:
