--- a/packages/starknet_flutter/pubspec.yaml
+++ b/packages/starknet_flutter/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   intl: ^0.18.0
   functional_listener: ^2.3.1
   google_fonts: ^4.0.3
+  confetti: ^0.7.0
   hive: ^2.2.3
   flutter_animate: ^4.1.0
   hive_flutter: ^1.1.0
