--- a/packages/starknet_flutter/pubspec.yaml
+++ b/packages/starknet_flutter/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   flutter:
     sdk: flutter
   animations: ^2.0.7
+  bip39: ^1.0.6
   crypto: ^3.0.2
   expandable: ^5.0.1
   flutter_svg: ^2.0.2
