--- a/packages/starknet/build.yaml
+++ b/packages/starknet/build.yaml
@@ -1,6 +1,9 @@
 targets:
   $default:
     builders:
+      freezed:
+        options:
+          union_key: starkNetRuntimeTypeToRemove
       json_serializable:
         options:
           explicit_to_json: true
