🛂 Add camera permission for iOS & macOS

--- a/packages/starknet_flutter/example/ios/Runner/Info.plist
+++ b/packages/starknet_flutter/example/ios/Runner/Info.plist
@@ -47,6 +47,8 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>NSCameraUsageDescription</key>
+  <string>This app needs camera access to scan QR codes</string>
 	<key>NSFaceIDUsageDescription</key>
 	<string>Use Touch ID or Face ID to process transactions.</string>
 </dict>
