--- a/packages/starknet_flutter/example/macos/Runner/Release.entitlements
+++ b/packages/starknet_flutter/example/macos/Runner/Release.entitlements
@@ -4,9 +4,11 @@
 <dict>
 	<key>com.apple.security.app-sandbox</key>
 	<true/>
+	<key>com.apple.security.device.camera</key>
+	<true/>
+	<key>com.apple.security.network.client</key>
+	<true/>
 	<key>keychain-access-groups</key>
 	<array/>
-	<key>com.apple.security.network.client</key>
-    <true/>
 </dict>
 </plist>
