--- a/packages/starknet_flutter/example/macos/Runner/DebugProfile.entitlements
+++ b/packages/starknet_flutter/example/macos/Runner/DebugProfile.entitlements
@@ -6,11 +6,13 @@
 	<true/>
 	<key>com.apple.security.cs.allow-jit</key>
 	<true/>
+	<key>com.apple.security.device.camera</key>
+	<true/>
+	<key>com.apple.security.network.client</key>
+	<true/>
 	<key>com.apple.security.network.server</key>
 	<true/>
 	<key>keychain-access-groups</key>
 	<array/>
-	<key>com.apple.security.network.client</key>
-    <true/>
 </dict>
 </plist>
