starknet: add 'rpc-node-bug' tag
This tag is used to to prevent running test which failed due to a known bug in JSON RPC provider.

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -98,7 +98,7 @@ jobs:
         name: Install dependencies
         run: dart pub get
       - name: Run tests on testnet
-        run: dart test -t integration-testnet
+        run: dart test -t integration-testnet --exclude-tags='rpc-node-bug'
 
   test-integration-devnet:
     needs: analyze
