--- a/packages/starknet_flutter/pubspec.yaml
+++ b/packages/starknet_flutter/pubspec.yaml
@@ -1,6 +1,6 @@
 name: starknet_flutter
 description: Zero-config wallet components for starknet
-version: 0.0.1
+version: 0.0.4
 homepage: https://github.com/gabsn/starknet.dart/tree/main/packages/starknet_flutter
 
 environment:
@@ -17,20 +17,20 @@ dependencies:
   flutter_svg: ^2.0.2
   intl: ^0.18.0
   functional_listener: ^2.3.1
-  google_fonts: ^4.0.3
+  google_fonts: ^5.0.0
   loading_indicator: ^3.1.0
   confetti: ^0.7.0
   hive: ^2.2.3
   flutter_animate: ^4.1.0
   hive_flutter: ^1.1.0
-  http: ^0.13.5
+  http: ^1.0.0
   modal_bottom_sheet: ^3.0.0-pre
   path_provider: ^2.0.13
   pattern_lock: ^2.0.0
   slide_to_act: ^2.0.1
   plugin_platform_interface: ^2.0.2
   pointycastle: ^3.6.2
-  starknet: 0.0.3
+  starknet:
   ulid: ^2.0.0
   mobile_scanner: ^3.0.0
   qr_flutter: ^4.0.0
@@ -41,7 +41,7 @@ dev_dependencies:
     sdk: flutter
   flutter_lints: ^2.0.1
   hive_generator: ^2.0.0
-  pigeon: ^9.0.4
+  pigeon: ^10.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
