--- a/docs.yaml
+++ b/docs.yaml
@@ -10,6 +10,9 @@ sidebar:
     - "/"
   - - Provider
     - "/provider"
+  - - Tutorial
+    - - - Mobile Wallet
+        - "/tutorial/mobile-wallet"
   - - Advanced
     - - - Reference API
         - "/reference"
