--- a/packages/starknet_flutter/pubspec.yaml
+++ b/packages/starknet_flutter/pubspec.yaml
@@ -33,7 +33,10 @@ dependencies:
   starknet:
   ulid: ^2.0.0
   mobile_scanner: ^3.0.0
-  qr_flutter: ^4.0.0
+  qr_flutter: ^4.1.0
+  riverpod: ^2.3.6
+  freezed: ^2.3.5
+  freezed_annotation: ^2.2.0
 
 dev_dependencies:
   build_runner: ^2.3.3
