--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,9 +12,9 @@ interact = "scripts.python.commands.interact:main"
 
 [tool.poetry.dependencies]
 python = ">=3.9,<3.10"
-starknet-devnet = "0.5.1"
-cairo-lang = "0.11.0.2"
-starknet-py = "^0.15.2"
+starknet-devnet = "0.5.4"
+cairo-lang = "0.11.2"
+starknet-py = "0.16.1"
 autopep8 = "^2.0.0"
 cairo-nile = "^0.14.0"
 fire = "^0.4.0"
