--- a/examples/wallet_app/pubspec.yaml
+++ b/examples/wallet_app/pubspec.yaml
@@ -32,10 +32,9 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.2
   starknet_flutter:
-    path: ../../packages/starknet_flutter
   starknet_riverpod:
-    path: ../../packages/starknet_riverpod
   hooks_riverpod: ^2.3.6
+  flutter_hooks: ^0.18.6
 
 dev_dependencies:
   flutter_test:
