--- a/packages/starknet_riverpod/pubspec.yaml
+++ b/packages/starknet_riverpod/pubspec.yaml
@@ -1,7 +1,7 @@
 name: starknet_riverpod
 description: A new Flutter package project.
 version: 0.0.1
-homepage:
+homepage: "https://starknetdart.dev"
 
 environment:
   sdk: ">=3.0.5 <4.0.0"
@@ -12,10 +12,13 @@ dependencies:
   easy_debounce: ^2.0.3
   flutter:
     sdk: flutter
+  flutter_hooks: ^0.18.6
   freezed_annotation: ^2.2.0
   hive: ^2.2.3
   hooks_riverpod: ^2.3.6
   riverpod_annotation: ^2.1.1
+  starknet:
+  starknet_flutter:
 
 dev_dependencies:
   flutter_test:
