--- a/packages/starknet_riverpod/pubspec.yaml
+++ b/packages/starknet_riverpod/pubspec.yaml
@@ -10,9 +10,11 @@ environment:
 dependencies:
   bip39: ^1.0.6
   easy_debounce: ^2.0.3
+  expandable: ^5.0.1
   flutter:
     sdk: flutter
   flutter_hooks: ^0.18.6
+  flutter_svg: ^2.0.7
   freezed_annotation: ^2.2.0
   hive: ^2.2.3
   hooks_riverpod: ^2.3.6
