--- a/packages/starknet_riverpod/pubspec.yaml
+++ b/packages/starknet_riverpod/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 
 dependencies:
   bip39: ^1.0.6
+  cached_network_image: ^3.2.3
   easy_debounce: ^2.0.3
   expandable: ^5.0.1
   flutter:
