Add custom painter

--- a/examples/wallet_app/pubspec_overrides.yaml
+++ b/examples/wallet_app/pubspec_overrides.yaml
@@ -1,5 +1,5 @@
 dependency_overrides:
   starknet_flutter:
     path: ../../packages/starknet_flutter
-  starknet_riverpod:
-    path: ../../packages/starknet_riverpod
+  wallet_kit:
+    path: ../../packages/wallet_kit
