--- a/examples/wallet_app/pubspec.yaml
+++ b/examples/wallet_app/pubspec.yaml
@@ -32,7 +32,7 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.2
   starknet_flutter:
-  starknet_riverpod:
+  wallet_kit:
   hooks_riverpod: ^2.3.6
   flutter_hooks: ^0.18.6
 
