--- a/examples/wallet_app/pubspec.yaml
+++ b/examples/wallet_app/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   wallet_kit:
   hooks_riverpod: ^2.3.6
   flutter_hooks: ^0.18.6
+  go_router: ^9.0.3
 
 dev_dependencies:
   flutter_test:
