--- a/packages/starknet_builder/pubspec.yaml
+++ b/packages/starknet_builder/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
 
 dev_dependencies:
   analyzer: ^5.4.0
+  args: ^2.4.2
   build_runner: ^2.1.11
   build_test: ^2.1.6
   lints: ^2.0.0
