--- a/packages/starknet_builder/build.yaml
+++ b/packages/starknet_builder/build.yaml
@@ -1,8 +1,8 @@
 builders:
   contract_generator:
     import: "package:starknet_builder/src/builder.dart"
-    builder_factories: ["contractGenerator"]
-    build_extensions: {".abi.json": [".g.dart"]}
+    builder_factories: ["contractGenerator", "legacyContractGenerator"]
+    build_extensions: {".abi.json": [".g.dart"], ".sierra.json": [".sierra.g.dart"]}
     auto_apply: root_package
     build_to: source
 
