wallet_app: add missing pubspec overrides for starknet

--- a/examples/wallet_app/pubspec_overrides.yaml
+++ b/examples/wallet_app/pubspec_overrides.yaml
@@ -3,5 +3,7 @@ dependency_overrides:
     path: ../../packages/secure_store
   wallet_kit:
     path: ../../packages/wallet_kit
+  starknet:
+    path: ../../packages/starknet
   starknet_builder:
     path: ../../packages/starknet_builder
