--- a/examples/wallet_app/pubspec.yaml
+++ b/examples/wallet_app/pubspec.yaml
@@ -9,8 +9,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  cupertino_icons: ^1.0.2
   wallet_kit:
+  starknet_provider:
+  starknet:
+  cupertino_icons: ^1.0.2
   hooks_riverpod: ^2.3.6
   flutter_hooks: ^0.18.6
   go_router: ^9.0.3
