--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,6 +2,7 @@
   "recommendations": [
     "dart-code.dart-code",
     "gaetschwartz.build-runner",
-    "blaxou.freezed"
+    "blaxou.freezed",
+    "unifiedjs.vscode-mdx"
   ]
 }
