--- a/examples/wallet_app/pubspec.yaml
+++ b/examples/wallet_app/pubspec.yaml
@@ -12,10 +12,12 @@ dependencies:
   wallet_kit:
   starknet_provider:
   starknet:
+  secure_store:
   cupertino_icons: ^1.0.2
   hooks_riverpod: ^2.3.6
   flutter_hooks: ^0.18.6
   go_router: ^9.0.3
+  hive_flutter: ^1.1.0
 
 dev_dependencies:
   flutter_test:
