Improve UX around secure store

--- a/packages/wallet_kit/pubspec.yaml
+++ b/packages/wallet_kit/pubspec.yaml
@@ -39,10 +39,8 @@ dev_dependencies:
 
 flutter:
   assets:
-    - assets/images/
     - assets/images/crypto/
-    - assets/images/crypto/USDC.svg
-    - assets/images/crypto/ETH.svg
+    - assets/images/wallets/
 
   fonts:
     - family: SF Pro Rounded
