--- a/examples/starknet_cli/pubspec.yaml
+++ b/examples/starknet_cli/pubspec.yaml
@@ -3,12 +3,13 @@ description: A sample command-line application.
 version: 1.0.0
 
 environment:
-  sdk: ^3.0.5
+  sdk: ^3.0.0
 
 dependencies:
   starknet:
   starknet_provider:
   args: ^2.4.2
+  csv: ^5.1.1
 
 dev_dependencies:
   lints: ^2.0.0
