--- a/packages/wallet_kit/pubspec.yaml
+++ b/packages/wallet_kit/pubspec.yaml
@@ -23,15 +23,17 @@ dependencies:
   hooks_riverpod: ^2.3.6
   image_network: ^2.5.4+1
   riverpod_annotation: ^2.1.1
-  uuid: ^3.0.7
+  uuid: ^4.0.0
   go_router: ^9.0.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
-  custom_lint: ^0.4.0
-  riverpod_lint: ^1.3.2
+  custom_lint_builder: ^0.6.4
+  custom_lint: ^0.6.4
+  riverpod_lint: ^2.3.10
+  meta: ^1.11.0
   build_runner: ^2.4.6
   riverpod_generator: ^2.2.3
   freezed: ^2.3.5
