Add melos to manage monorepo

--- a/docs.yaml
+++ b/docs.yaml
@@ -24,3 +24,5 @@ sidebar:
         - "/packages/secure-store"
       - - Wallet Kit
         - "/packages/wallet-kit"
+  - - How to Contribute
+    - "/how-to-contribute"
