--- a/packages/wallet_kit/android/local.properties
+++ b/packages/wallet_kit/android/local.properties
@@ -1,2 +1,2 @@
-sdk.dir=/Users/paulreboullet/Library/Android/sdk
-flutter.sdk=/usr/local/Caskroom/flutter/3.7.7/flutter
+sdk.dir=/Users/gabin/Library/Android/sdk
+flutter.sdk=/Users/gabin/development/flutter
