--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -5,6 +5,7 @@ on:
 
 jobs:
   lint:
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: dart-lang/setup-dart@v1.0
@@ -14,6 +15,7 @@ jobs:
       - run: melos analyze
 
   test-unit:
+    runs-on: ubuntu-latest
     needs: lint
     steps:
       - uses: actions/checkout@v2
@@ -23,6 +25,7 @@ jobs:
       - run: melos test:dart:unit
 
   test-integration:
+    runs-on: ubuntu-latest
     needs: lint
     services:
       devnet:
